PLAT-4708 - Rough draft of ServerRunner